macros/blueprint-proc-macro/tests/invalid_cases/job/02_invalid_result_syntax.stderr
error: expected `,`
 --> tests/invalid_cases/job/02_invalid_result_syntax.rs:3:41
  |
3 | #[job(id = 0, params(n), result(Vec<u8> String))]
  |                                         ^^^^^^
